Fixed hamburger menu issue on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,9 +33,10 @@
         width: 12px;
     }
     #search-form .search-input {
-        padding: 25px 65px 24px 70px;
+        padding: 25px 65px 24px 0px;
         font-size: 17px;
-        left: 0;
+        left: 70px;
+        width: auto;
     }
     .styleguide #content .desc .hero {
         min-height: 300px;
